# hermes

./: ,q  .gitignore  ANNUAL_REPORTS_FEATURE_SPEC.md  CONTRIBUTING.md  HERMES_ROADMAP.md  README.md  SETUP_FIX.md  SQL_QUERIES.md  check_collectors.py  check_installation.py  check_schema.py  collect_country_data.py  collect_weather_50cities.py  config_cities.py  database.py  fetch_market_data.py  fetch_neo_data.py  fetch_solar_data.py  hermes.db  hermes_dashboard.py  initialize_database.py  install_phase1.ps1  post_cleanup.py  pyproject.toml  requirements.txt  run_hermes.py  scheduler.py  test_all_collectors.py  test_commodities.py  test_config_quick.py  test_country.py  test_database.py  test_db_quick.py  test_forex.py  test_phase2.py  test_simple.py  view_earthquakes.py
.claude/: settings.local.json
.github/: hermes_workflow.yml
.streamlit/: config.toml
backups/: hermes_dashboard_backup.py  hermes_scheduler.py
collectors/: __init__.py  commodities_collector.py  crypto_collector.py  disasters_collector.py  economics_collector.py  forex_collector.py  gdelt_collector.py  investor_relations_collector.py  markets_collector.py  news_collector.py  space_collector.py  weather_collector.py  worldbank_collector.py
config/: alert_rules.py  settings.py  tracked_assets.py
core/: __init__.py  cache.py  config.py  database.py  exceptions.py  logging_config.py  models.py  validators.py
database/: setup_database.py
docs/: ADD_DISASTERS_GUIDE.md  ADD_ECONOMIC_INDICATORS_GUIDE.md  ADD_FOREX_GUIDE.md  ADD_WILDFIRES_GUIDE.md  BUG_FIXES_GUIDE.md  CHANGELOG.md  CLEANUP_CHECKLIST.md  CLEANUP_SUMMARY.md  COMPARISON_METRICS.md  COUNTRY_DATA_FIELDS.md  DEPLOYMENT_GUIDE.md  ERROR_HANDLING_GUIDE.md  MIGRATION_GUIDE.md  (+10 more)
(+78 files in other folders)
